@@ -1396,72 +1396,6 @@ BATsubsort(BAT **sorted, BAT **order, BAT **groups,
 }
 
 /*
- * Reverse a BAT
- * BATrevert rearranges a BAT in reverse order.
- */
-gdk_return
-BATrevert(BAT *b)
-{
-	char *h, *t;
-	BUN p, q;
-	BATiter bi = bat_iterator(b);
-	size_t s;
-	int x;
-
-	BATcheck(b, "BATrevert", GDK_FAIL);
-	if ((b->htype == TYPE_void && b->hseqbase != oid_nil) || (b->ttype == TYPE_void && b->tseqbase != oid_nil)) {
-		/* materialize void columns in-place */
-		if (BATmaterialize(b) != GDK_SUCCEED)
-			return GDK_FAIL;
-	}
-	ALIGNdel(b, "BATrevert", FALSE, GDK_FAIL);
-	s = Hsize(b);
-	if (s > 0) {
-		h = (char *) GDKmalloc(s);
-		if (!h) {
-			return GDK_FAIL;
-		}
-		for (p = BUNlast(b) ? BUNlast(b) - 1 : 0, q = BUNfirst(b); p > q; p--, q++) {
-			char *ph = BUNhloc(bi, p);
-			char *qh = BUNhloc(bi, q);
-
-			memcpy(h, ph, s);
-			memcpy(ph, qh, s);
-			memcpy(qh, h, s);
-		}
-		GDKfree(h);
-	}
-	s = Tsize(b);
-	if (s > 0) {
-		t = (char *) GDKmalloc(s);
-		if (!t) {
-			return GDK_FAIL;
-		}
-		for (p = BUNlast(b) ? BUNlast(b) - 1 : 0, q = BUNfirst(b); p > q; p--, q++) {
-			char *pt = BUNtloc(bi, p);
-			char *qt = BUNtloc(bi, q);
-
-			memcpy(t, pt, s);
-			memcpy(pt, qt, s);
-			memcpy(qt, t, s);
-		}
-		GDKfree(t);
-	}
-	HASHdestroy(b);
-	IMPSdestroy(b);
-	/* interchange sorted and revsorted */
-	x = b->hrevsorted;
-	b->hrevsorted = b->hsorted;
-	b->hsorted = x;
-	x = b->trevsorted;
-	b->trevsorted = b->tsorted;
-	b->tsorted = x;
-	b->hdense = FALSE;
-	b->tdense = FALSE;
-	return GDK_SUCCEED;
-}
-
-/*
  * return a view on b consisting of the head of b and a new dense tail
  * starting at oid_base.
  */
